# Silnik_2d

./: AnimatedObject.cpp  AnimatedObject.hpp  BitmapHandler.cpp  BitmapHandler.hpp  BitmapObject.cpp  BitmapObject.hpp  CMakeLists.txt  DrawableObject.hpp  Engine.cpp  Engine.hpp  GameObjects.cpp  GameObjects.hpp  LineSegment.cpp  LineSegment.hpp  Player.cpp  Player.hpp  Point2D.cpp  Point2D.hpp  PrimitiveRender.cpp  PrimitiveRenderer.hpp  README.md  ShapeObject.hpp  SpriteObject.cpp  SpriteObject.hpp  TransformableObject.hpp  UpdatableObject.hpp  drawAllFigures.cpp  drawAllFigures.hpp  main.cpp
Engine/: Engine.cpp  Engine.hpp
Figures/LineSegment/: LineSegment.cpp  LineSegment.hpp
Figures/Point2D/: Point2D.cpp  Point2D.hpp
Figures/Shapes/: Helpers.cpp  Helpers.hpp
Figures/Shapes/Circles/: Circles.cpp  Circles.hpp
Figures/Shapes/Elipses/: Elipses.cpp  Elipses.hpp
Figures/Shapes/Helpers/: Helpers.cpp  Helpers.hpp
Figures/Shapes/Lines/: Lines.cpp  Lines.hpp
Figures/Shapes/Points/: Points.cpp  Points.hpp
Figures/Shapes/Polygon/: Polygons.cpp  Polygons.hpp
Figures/Shapes/Polylines/: Polylines.cpp  Polylines.hpp
Figures/drawAllFigures/: drawAllFigures.cpp  drawAllFigures.hpp
Object/: DrawableObject.hpp  ShapeObject.hpp  TransformableObject.hpp  UpdatableObject.hpp
Object/AnimatedObject/: AnimatedObject.cpp  AnimatedObject.hpp
Object/BitmapHandler/: BitmapHandler.cpp  BitmapHandler.hpp
Object/BitmapObject/: BitmapObject.cpp  BitmapObject.hpp
Object/GameObject/: GameObjects.cpp  GameObjects.hpp
Object/Renderer/: PrimitiveRender.cpp  PrimitiveRenderer.hpp
Object/sprite/: SpriteObject.cpp  SpriteObject.hpp
Player/: Player.cpp  Player.hpp
